--- a/USER/Template.uvprojx
+++ b/USER/Template.uvprojx
@@ -396,6 +396,16 @@
               <FileType>1</FileType>
               <FilePath>.\system_stm32f10x.c</FilePath>
             </File>
+            <File>
+              <FileName>wather.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\wather.c</FilePath>
+            </File>
+            <File>
+              <FileName>include.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\include.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -557,9 +567,9 @@
           <GroupName>README</GroupName>
           <Files>
             <File>
-              <FileName>README.TXT</FileName>
+              <FileName>README.md</FileName>
               <FileType>5</FileType>
-              <FilePath>..\README.TXT</FilePath>
+              <FilePath>..\README.md</FilePath>
             </File>
           </Files>
         </Group>
