--- a/USER/Template.uvprojx
+++ b/USER/Template.uvprojx
@@ -16,7 +16,7 @@
         <TargetCommonOption>
           <Device>STM32F103ZE</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F1xx_DFP.2.1.0</PackID>
+          <PackID>Keil.STM32F1xx_DFP.2.3.0</PackID>
           <PackURL>http://www.keil.com/pack/</PackURL>
           <Cpu>IROM(0x08000000,0x80000) IRAM(0x20000000,0x10000) CPUTYPE("Cortex-M3") CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -184,6 +184,7 @@
             <hadXRAM>0</hadXRAM>
             <uocXRam>0</uocXRam>
             <RvdsVP>0</RvdsVP>
+            <RvdsMve>0</RvdsMve>
             <hadIRAM2>0</hadIRAM2>
             <hadIROM2>0</hadIROM2>
             <StupSel>8</StupSel>
@@ -620,6 +621,16 @@
               <FileName>ESP8266.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\HARDWARE\ESP8266.c</FilePath>
+            </File>
+            <File>
+              <FileName>exit.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\exit.c</FilePath>
+            </File>
+            <File>
+              <FileName>KEY.C</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\HARDWARE\KEY.C</FilePath>
             </File>
           </Files>
         </Group>
